feat: port donut.c to ecos
- port donut.c to ecos as donut_tft.c and some support functions to
  tinydonut.c, but with a low running frame rate
- add string.c, support memcpy and memset
- add donut option to tinysh

--- a/src/Makefile
+++ b/src/Makefile
@@ -37,6 +37,8 @@ SRC_PATH := ./start.s \
 	    ./tinypsram.c \
 	    ./tinybench.c \
 	    ./tinysh.c \
+	    ./tinydonut.c \
+	    ./donut_tft.c \
 	    ./firmware.c
 
 # 链接脚本路径
